--- a/jpa-basic/build.gradle
+++ b/jpa-basic/build.gradle
@@ -15,7 +15,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager
     implementation 'org.hibernate:hibernate-entitymanager:5.4.10.Final'
     // https://mvnrepository.com/artifact/com.h2database/h2
-    testImplementation 'com.h2database:h2:2.1.214'
+    implementation 'com.h2database:h2:2.1.214'
+
 }
 
 test {
